phalcom-ast/tests/snapshots/parser__standalone_invariant_diverts_to_class_invariants.snap
---
source: phalcom-ast/tests/parser.rs
assertion_line: 312
expression: "parse(\"class Point {\\n  @invariant(x >= 0)\\n\\n  get() {\\n    return x\\n  }\\n}\\n\")"
---
Program {
    statements: [
        Class(
            ClassDef {
                name: "Point",
                superclass: None,
                members: [
                    Method(
                        MethodDef {
                            name: "get",
                            params: [],
                            body: [
                                Return(
                                    ReturnStatement {
                                        value: Some(
                                            Var {
                                                value: "x",
                                                range: CopyRange {
                                                    start: 57,
                                                    end: 58,
                                                },
                                            },
                                        ),
                                        range: CopyRange {
                                            start: 50,
                                            end: 58,
                                        },
                                    },
                                ),
                            ],
                            is_static: false,
                            is_constructor: false,
                            attributes: [],
                            range: CopyRange {
                                start: 38,
                                end: 62,
                            },
                            name_range: CopyRange {
                                start: 38,
                                end: 41,
                            },
                        },
                    ),
                ],
                attributes: [],
                invariants: [
                    (
                        Binary(
                            BinaryExpr {
                                op: GreaterThanOrEqual,
                                left: Var {
                                    value: "x",
                                    range: CopyRange {
                                        start: 27,
                                        end: 28,
                                    },
                                },
                                right: Number {
                                    value: 0.0,
                                    range: CopyRange {
                                        start: 32,
                                        end: 33,
                                    },
                                },
                                range: CopyRange {
                                    start: 27,
                                    end: 33,
                                },
                            },
                        ),
                        CopyRange {
                            start: 16,
                            end: 34,
                        },
                    ),
                ],
                range: CopyRange {
                    start: 0,
                    end: 64,
                },
                name_range: CopyRange {
                    start: 6,
                    end: 11,
                },
            },
        ),
    ],
}
