phalcom-ast/tests/snapshots/parser__trailing_block_sugar_chained.snap
---
source: phalcom-ast/tests/parser.rs
assertion_line: 260
expression: "parse(\"numbers.reduce(0) { acc, n => acc + n }\")"
---
Program {
    statements: [
        Expr {
            expr: MethodCall(
                MethodCallExpr {
                    object: Var {
                        value: "numbers",
                        range: CopyRange {
                            start: 0,
                            end: 7,
                        },
                    },
                    method: "reduce",
                    args: [
                        Argument {
                            label: None,
                            expr: Int {
                                digits: "0",
                                radix: 10,
                                range: CopyRange {
                                    start: 15,
                                    end: 16,
                                },
                            },
                            range: CopyRange {
                                start: 15,
                                end: 16,
                            },
                        },
                        Argument {
                            label: None,
                            expr: Block(
                                BlockExpr {
                                    params: [
                                        "acc",
                                        "n",
                                    ],
                                    body: [
                                        Expr {
                                            expr: Binary(
                                                BinaryExpr {
                                                    op: Add,
                                                    left: Var {
                                                        value: "acc",
                                                        range: CopyRange {
                                                            start: 30,
                                                            end: 33,
                                                        },
                                                    },
                                                    right: Var {
                                                        value: "n",
                                                        range: CopyRange {
                                                            start: 36,
                                                            end: 37,
                                                        },
                                                    },
                                                    range: CopyRange {
                                                        start: 30,
                                                        end: 37,
                                                    },
                                                },
                                            ),
                                            range: CopyRange {
                                                start: 30,
                                                end: 37,
                                            },
                                        },
                                    ],
                                    expr_body: false,
                                    range: CopyRange {
                                        start: 18,
                                        end: 39,
                                    },
                                },
                            ),
                            range: CopyRange {
                                start: 39,
                                end: 39,
                            },
                        },
                    ],
                    range: CopyRange {
                        start: 0,
                        end: 39,
                    },
                },
            ),
            range: CopyRange {
                start: 0,
                end: 39,
            },
        },
    ],
}
