phalcom-ast/tests/snapshots/parser__trailing_block_sugar_method_call.snap
---
source: phalcom-ast/tests/parser.rs
expression: "parse(\"numbers.map { n => n * 2 }\")"
---
Program {
    statements: [
        Expr {
            expr: MethodCall(
                MethodCallExpr {
                    object: Var {
                        value: "numbers",
                        range: CopyRange {
                            start: 0,
                            end: 7,
                        },
                    },
                    method: "map",
                    args: [
                        Argument {
                            label: None,
                            expr: Block(
                                BlockExpr {
                                    params: [
                                        "n",
                                    ],
                                    body: [
                                        Expr {
                                            expr: Binary(
                                                BinaryExpr {
                                                    op: Multiply,
                                                    left: Var {
                                                        value: "n",
                                                        range: CopyRange {
                                                            start: 19,
                                                            end: 20,
                                                        },
                                                    },
                                                    right: Number {
                                                        value: 2.0,
                                                        range: CopyRange {
                                                            start: 23,
                                                            end: 24,
                                                        },
                                                    },
                                                    range: CopyRange {
                                                        start: 19,
                                                        end: 24,
                                                    },
                                                },
                                            ),
                                            range: CopyRange {
                                                start: 19,
                                                end: 24,
                                            },
                                        },
                                    ],
                                    expr_body: false,
                                    range: CopyRange {
                                        start: 12,
                                        end: 26,
                                    },
                                },
                            ),
                            range: CopyRange {
                                start: 26,
                                end: 26,
                            },
                        },
                    ],
                    range: CopyRange {
                        start: 0,
                        end: 26,
                    },
                },
            ),
            range: CopyRange {
                start: 0,
                end: 26,
            },
        },
    ],
}
