phalcom-ast/tests/snapshots/parser__trailing_newline_parses.snap
---
source: phalcom-ast/tests/parser.rs
expression: "parse(\"let x = 1\\n\")"
---
Program {
    statements: [
        Let(
            LetBinding {
                name: "x",
                value: Some(
                    Number {
                        value: 1.0,
                        range: CopyRange {
                            start: 8,
                            end: 9,
                        },
                    },
                ),
                range: CopyRange {
                    start: 0,
                    end: 9,
                },
            },
        ),
    ],
}
