phalcom-ast/tests/snapshots/parser__unary_expression.snap
---
source: phalcom-ast/tests/parser.rs
expression: "parse(\"!true\")"
---
Program {
    statements: [
        Expr {
            expr: Unary(
                UnaryExpr {
                    op: Not,
                    expr: Boolean {
                        value: true,
                        range: CopyRange {
                            start: 1,
                            end: 5,
                        },
                    },
                    range: CopyRange {
                        start: 0,
                        end: 5,
                    },
                },
            ),
            range: CopyRange {
                start: 0,
                end: 5,
            },
        },
    ],
}
