phalcom-ast/tests/snapshots/parser__whitespace_only_input_parses.snap
---
source: phalcom-ast/tests/parser.rs
expression: "parse(\"\\n  \\n\")"
---
Program {
    statements: [],
}
